--- a/LETTER PROJECT TESTING ZONE/Coin Insert and Knob - Combining/index.html
+++ b/LETTER PROJECT TESTING ZONE/Coin Insert and Knob - Combining/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <img id="knob_img" src="knob.jpg" alt="knob" />
-    <br/>Current State: <p id="debug_state_display"></p>
+    Current State: <p id="debug_state_display"></p>
     Target Div ID: <p id="ev_target_id"></p>
 	<script src="script.js"></script>
   </body>
